--- a/index.html
+++ b/index.html
@@ -6,70 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>QWIXX</title>
-    <style>
-      body{
-        font-size: 30px;
-      }
-      table {
-        margin: 10px auto; 
-        border-collapse: collapse;
-      }
-      .checks > td {
-        width:40px;
-        text-align:center;
-        border: 3px solid;
-        cursor: pointer;
-        padding: 5px;
-      }
-      .strikes > td {
-        width:50px;
-        text-align:center;
-        border: 3px solid;
-        border-color: #000;
-        cursor: pointer;
-        padding: 5px;
-        color: #000;
-      }
-      .scores > td {
-        width:70px;
-        height:70px;
-        text-align:center;
-        border: 3px solid;
-        border-color: #000;
-        padding: 5px;
-        color: #000;
-      }
-      #redrow, #red {
-        background-color: rgba(255, 0, 0, 0.5);
-      }
-      #redrow > td {
-        border-color: #ff0000;
-      }
-      #yellowrow, #yellow {
-        background-color: rgba(255, 255, 0, 0.5);
-      }
-      #yellowrow > td {
-        border-color: #ffff00;
-      }
-      #greenrow, #green {
-        background-color: rgba(0, 128, 0, 0.5);
-      }
-      #greenrow > td {
-        border-color: #008000;
-      }
-      #bluerow, #blue {
-        background-color: rgba(0, 0, 255, 0.5);
-      }
-      #bluerow > td {
-        border-color: #0000ff;
-      }
-      #strikerow, #strike {
-        background-color: rgba(128, 128, 128, 0.5);
-      }
-      #total {
-        font-size: 55px;
-      }
-    </style>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <div>
@@ -88,67 +25,78 @@
           <td id="red10">12</td>
           <td id="red11"><i class="fa-solid fa-lock"></i></td>
         </tr>
-        <tr id="yellowrow" class="checks">
-          <td id="yellow0">2</td>
-          <td id="yellow1">3</td>
-          <td id="yellow2">4</td>
-          <td id="yellow3">5</td>
-          <td id="yellow4">6</td>
-          <td id="yellow5">7</td>
-          <td id="yellow6">8</td>
-          <td id="yellow7">9</td>
-          <td id="yellow8">10</td>
-          <td id="yellow9">11</td>
-          <td id="yellow10">12</td>
-          <td id="yellow11"><i class="fa-solid fa-lock"></i></td>
+        <tr id="yelrow" class="checks">
+          <td id="yel0">2</td>
+          <td id="yel1">3</td>
+          <td id="yel2">4</td>
+          <td id="yel3">5</td>
+          <td id="yel4">6</td>
+          <td id="yel5">7</td>
+          <td id="yel6">8</td>
+          <td id="yel7">9</td>
+          <td id="yel8">10</td>
+          <td id="yel9">11</td>
+          <td id="yel10">12</td>
+          <td id="yel11"><i class="fa-solid fa-lock"></i></td>
         </tr>
-        <tr id="greenrow" class="checks">
-          <td id="green0">12</td>
-          <td id="green1">11</td>
-          <td id="green2">10</td>
-          <td id="green3">9</td>
-          <td id="green4">8</td>
-          <td id="green5">7</td>
-          <td id="green6">6</td>
-          <td id="green7">5</td>
-          <td id="green8">4</td>
-          <td id="green9">3</td>
-          <td id="green10">2</td>
-          <td id="green11"><i class="fa-solid fa-lock"></i></td>
+        <tr id="grnrow" class="checks">
+          <td id="grn0">12</td>
+          <td id="grn1">11</td>
+          <td id="grn2">10</td>
+          <td id="grn3">9</td>
+          <td id="grn4">8</td>
+          <td id="grn5">7</td>
+          <td id="grn6">6</td>
+          <td id="grn7">5</td>
+          <td id="grn8">4</td>
+          <td id="grn9">3</td>
+          <td id="grn10">2</td>
+          <td id="grn11"><i class="fa-solid fa-lock"></i></td>
         </tr>
-        <tr id="bluerow" class="checks">
-          <td id="blue0">12</td>
-          <td id="blue1">11</td>
-          <td id="blue2">10</td>
-          <td id="blue3">9</td>
-          <td id="blue4">8</td>
-          <td id="blue5">7</td>
-          <td id="blue6">6</td>
-          <td id="blue7">5</td>
-          <td id="blue8">4</td>
-          <td id="blue9">3</td>
-          <td id="blue10">2</td>
-          <td id="blue11"><i class="fa-solid fa-lock"></i></td>
+        <tr id="blurow" class="checks">
+          <td id="blu0">12</td>
+          <td id="blu1">11</td>
+          <td id="blu2">10</td>
+          <td id="blu3">9</td>
+          <td id="blu4">8</td>
+          <td id="blu5">7</td>
+          <td id="blu6">6</td>
+          <td id="blu7">5</td>
+          <td id="blu8">4</td>
+          <td id="blu9">3</td>
+          <td id="blu10">2</td>
+          <td id="blu11"><i class="fa-solid fa-lock"></i></td>
         </tr>
       </table>
 
       <table>
-        <tr id="strikerow" class="strikes">
-          <td id="strike0"><i class="fa-solid fa-dice"></i></td>
-          <td id="strike1"><i class="fa-solid fa-dice"></i></td>
-          <td id="strike2"><i class="fa-solid fa-dice"></i></td>
-          <td id="strike3"><i class="fa-solid fa-dice"></i></td>
+        <tr id="stkrow" class="stks">
+          <td id="stk0"><i class="fa-solid fa-dice"></i></td>
+          <td id="stk1"><i class="fa-solid fa-dice"></i></td>
+          <td id="stk2"><i class="fa-solid fa-dice"></i></td>
+          <td id="stk3"><i class="fa-solid fa-dice"></i></td>
         </tr>
       </table>
 
       <table>
         <tr class="scores">
-          <td class="score" id="red">0</td>
-          <td class="score" id="yellow">0</td>
-          <td class="score" id="green">0</td>
-          <td class="score" id="blue">0</td>
-          <td class="score" id="strike">0</td>
-          <td class="score" id="total">0</td>
+          <td class="score" id="scred">0</td>
+          <td class="score" id="scyel">0</td>
+          <td class="score" id="scgrn">0</td>
+          <td class="score" id="scblu">0</td>
+          <td class="score" id="scstk">0</td>
+          <td class="score" id="sctot">0</td>
+        </tr>
+      </table>
+
+      <table class="dicetable">
+        <tr class="dice" id="roll">
+          <td id="di1" class="d1"></td>
+          <td id="di2" class="d2"></td>
+          <td id="dir" class="d3"></td>
+          <td id="diy" class="d4"></td>
+          <td id="dig" class="d5"></td>
+          <td id="dib" class="d6"></td>
         </tr>
       </table>
     </div>
@@ -158,22 +106,40 @@
       const lo = ["2","3","4","5","6","7","8","9","10","11","12",'<i class="fa-solid fa-lock"></i>'];
       const hi = ["12","11","10","9","8","7","6","5","4","3","2",'<i class="fa-solid fa-lock"></i>'];
       const scr = [0,1,3,6,10,15,21,28,36,45,55,66,78];
-      let red    = [0,0,0,0,0,0,0,0,0,0,0,0];
-      let yellow = [0,0,0,0,0,0,0,0,0,0,0,0];
-      let green  = [0,0,0,0,0,0,0,0,0,0,0,0];
-      let blue   = [0,0,0,0,0,0,0,0,0,0,0,0];
-      let strike = [0,0,0,0];
+      let red = [0,0,0,0,0,0,0,0,0,0,0,0];
+      let yel = [0,0,0,0,0,0,0,0,0,0,0,0];
+      let grn = [0,0,0,0,0,0,0,0,0,0,0,0];
+      let blu = [0,0,0,0,0,0,0,0,0,0,0,0];
+      let stk = [0,0,0,0];
 
+      roll.addEventListener('click', function(){ 
+        for(let i=0; i<24; ++i) {
+          setTimeout(function() {
+            let di1 = Math.floor(Math.random() * 6) + 1;
+            let di2 = Math.floor(Math.random() * 6) + 1;
+            let dir = Math.floor(Math.random() * 6) + 1;
+            let diy = Math.floor(Math.random() * 6) + 1;
+            let dig = Math.floor(Math.random() * 6) + 1;
+            let dib = Math.floor(Math.random() * 6) + 1;
+            document.getElementById("di1").className = "d"+di1;
+            document.getElementById("di2").className = "d"+di2;
+            document.getElementById("dir").className = "d"+dir;
+            document.getElementById("diy").className = "d"+diy;
+            document.getElementById("dig").className = "d"+dig;
+            document.getElementById("dib").className = "d"+dib;
+          }, 50*i);
+        }
+      });
 
       for(let i=0; i<4; ++i) {
-        let strikeEl = document.getElementById("strike"+i);
-        strikeEl.addEventListener('click', function(){ 
+        let stkEl = document.getElementById("stk"+i);
+        stkEl.addEventListener('click', function(){ 
             if (this.innerHTML == '<i class="fa-solid fa-dice"></i>') {
               this.innerHTML = '<i class="fa-solid fa-x"></i>';
-              strike[i] = 1;
+              stk[i] = 1;
             } else {
               this.innerHTML = '<i class="fa-solid fa-dice"></i>';
-              strike[i] = 0;
+              stk[i] = 0;
             }
             score();
         });
@@ -186,36 +152,36 @@
         let b = 0;
         let s = 0;
         for(let i=0; i<4; ++i) {
-          s+= strike[i];
+          s+= stk[i];
         }
         for(let i=0;i<10;++i) {
           r += red[i];
-          y += yellow[i];
-          g += green[i];
-          b += blue[i];
+          y += yel[i];
+          g += grn[i];
+          b += blu[i];
         }
         if ((red[10] == 1) && (red[11] == 1)) { r += 2; }
-        if ((yellow[10] == 1) && (yellow[11] == 1)) { y += 2; }
-        if ((green[10] == 1) && (green[11] == 1)) { g += 2; }
-        if ((blue[10] == 1) && (blue[11] == 1)) { b += 2; }
+        if ((yel[10] == 1) && (yel[11] == 1)) { y += 2; }
+        if ((grn[10] == 1) && (grn[11] == 1)) { g += 2; }
+        if ((blu[10] == 1) && (blu[11] == 1)) { b += 2; }
         let tr = scr[r];
         let ty = scr[y];
         let tg = scr[g];
         let tb = scr[b];
         let ts = s * -5;
-        let total = tr + ty + tg + tb + ts;
-        let sred = document.getElementById("red");
-        let syellow = document.getElementById("yellow");
-        let sgreen = document.getElementById("green");
-        let sblue = document.getElementById("blue");
-        let sstrike = document.getElementById("strike");
-        let stotal = document.getElementById("total");
+        let tot = tr + ty + tg + tb + ts;
+        let sred = document.getElementById("scred");
+        let syel = document.getElementById("scyel");
+        let sgrn = document.getElementById("scgrn");
+        let sblu = document.getElementById("scblu");
+        let sstk = document.getElementById("scstk");
+        let stot = document.getElementById("sctot");
         sred.innerHTML=tr;
-        syellow.innerHTML=ty;
-        sgreen.innerHTML=tg;
-        sblue.innerHTML=tb;
-        sstrike.innerHTML=ts;
-        stotal.innerHTML=total;
+        syel.innerHTML=ty;
+        sgrn.innerHTML=tg;
+        sblu.innerHTML=tb;
+        sstk.innerHTML=ts;
+        stot.innerHTML=tot;
       }
 
       function can(arr, num) {
@@ -245,66 +211,37 @@
         return 0;
       }
 
-      for(let i=0; i<12; ++i) {
+      function listen2me(element, hilo, col, num) {
+        if (element.innerHTML == hilo[num]) {
+          if (can(col,num)) {
+            element.innerHTML = '<i class="fa-solid fa-x"></i>';
+            col[num] = 1;
+          }
+        } else {
+          if ((num == 11) || (col[11] == 0)) { // not locked
+            element.innerHTML = hilo[num];
+            col[num] = 0;
+          }
+        }
+        score();
+      }
+
+      for(let i=0; i<12; ++i) { 
         let redEl = document.getElementById("red"+i);
-        let yellowEl = document.getElementById("yellow"+i);
-        let greenEl = document.getElementById("green"+i);
-        let blueEl = document.getElementById("blue"+i);
+        let yelEl = document.getElementById("yel"+i);
+        let grnEl = document.getElementById("grn"+i);
+        let bluEl = document.getElementById("blu"+i);
         redEl.addEventListener('click', function(){ 
-            if (this.innerHTML == lo[i]) {
-              if (can(red,i)) {
-                this.innerHTML = '<i class="fa-solid fa-x"></i>';
-                red[i] = 1;
-              }
-            } else {
-              if ((i == 11) || (red[11] == 0)) { // not locked
-                this.innerHTML = lo[i];
-                red[i] = 0;
-              }
-            }
-            score();
+          listen2me(redEl, lo, red, i);
         });
-        yellowEl.addEventListener('click', function(){ 
-            if (this.innerHTML == lo[i]) {
-              if (can(yellow,i)) {
-                this.innerHTML = '<i class="fa-solid fa-x"></i>';
-                yellow[i] = 1;
-              }
-            } else {
-              if ((i == 11) || (yellow[11] == 0)) { // not locked
-                this.innerHTML = lo[i];
-                yellow[i] = 0;
-              }
-            }
-            score();
+        yelEl.addEventListener('click', function(){ 
+          listen2me(yelEl, lo, yel, i);
         });
-        greenEl.addEventListener('click', function(){ 
-            if (this.innerHTML == hi[i]) {
-              if (can(green,i)) {
-                this.innerHTML = '<i class="fa-solid fa-x"></i>';
-                green[i] = 1;
-              }
-            } else {
-              if ((i == 11) || (green[11] == 0)) { // not locked
-                this.innerHTML = hi[i];
-                green[i] = 0;
-              }
-            }
-            score();
+        grnEl.addEventListener('click', function(){ 
+          listen2me(grnEl, hi, grn, i);
         });
-        blueEl.addEventListener('click', function(){ 
-            if (this.innerHTML == hi[i]) {
-              if (can(blue,i)) {
-                this.innerHTML = '<i class="fa-solid fa-x"></i>';
-                blue[i] = 1;
-              }
-            } else {
-              if ((i == 11) || (blue[11] == 0)) { // not locked
-                this.innerHTML = hi[i];
-                blue[i] = 0;
-              }
-            }
-            score();
+        bluEl.addEventListener('click', function(){ 
+          listen2me(bluEl, hi, blu, i);
         });
       }
 
